# n8n-transpiler

./: .gitignore  Makefile  Plan.md  README.md  pyproject.toml
src/n8n_transpiler/: __init__.py  cli.py  credentials.py  ir.py  parse.py  runner.py
src/n8n_transpiler/codegen/: __init__.py
src/n8n_transpiler/codegen/nodes/: __init__.py
src/n8n_transpiler/expr/: __init__.py
tests/: test_cli_smoke.py
